fix: add actual ValidatorMetaData struct incl name and avatar fix: fix the broken single validators query to validator_details
